// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Indexes /> > should render 1`] = `
<Fragment>
  <Connect(RebuildAlert) />
  <Connect(RebuildIndex) />
  <ScrollList
    documents={
      [
        {
          "id": "foo",
        },
        {
          "id": "bar",
        },
      ]
    }
    onLoadNextPage={[Function]}
    renderRow={[Function]}
  />
</Fragment>
`;

exports[`<Indexes /> > should render with [documents=null] 1`] = `<LoadingPlaceholder />`;

exports[`<Indexes /> > should render with empty documents array 1`] = `
<Fragment>
  <Connect(RebuildAlert) />
  <Connect(RebuildIndex) />
  <NoneFoundBox
    noun="indexes"
  />
  <ScrollList
    documents={[]}
    onLoadNextPage={[Function]}
    renderRow={[Function]}
  />
</Fragment>
`;
